# sample-project-sam

./: .gitignore  Makefile  README.md  SAM.md  docker-compose.yaml  main.py  pyproject.toml  sam.dockerfile  samconfig.toml  template.yaml  test.dockerfile
hello_world/: app.dockerfile  app.py
tests/unit/hello_world/: test_handler.py
